2003-07-29  Ben Elliston  <bje@wasabisystems.com>

	* MAINTAINERS: Remove self as M88k maintainer.  Future M88k
	maintenance defaults to the blanket write privilege maintainers.

2003-07-29  Michael Meissner  <gnu@the-meissners.org>

	* MAINTAINERS: Updated my email address.

2003-07-29  Nick Clifton  <nickc@redhat.com>

	* objdump.c: Update to ISO C.

2003-07-24  Nick Clifton  <nickc@redhat.com>

	* objdump.c (disassemble_data): Do not ignore sections without the
	LOAD flag when disassemble_all is true.  Only print a message
	about disassembling a section if it contains some data.

	* po/fr.po: Updated French translation.

2003-07-23  Nick Clifton  <nickc@redhat.com>

	* objcopy.c: Switch to ISO C.  Remove debugging code accidentally
	left in.  Some formatting tidy ups.

2003-07-22  Salvador Eduardo Tropea <set@computer.org>

	* objdump.c: New command line option --debugging-tags.
	* doc/binutils.texi: Document new command line option.
	* prdbg.c: Code to print the debug info as tags compatible 
	with ctags.
	* budbg.h: Adjust prototype.
	* NEWS: Mention new switch
        
2003-07-18  Nick Clifton  <nickc@redhat.com>

	* objdump.c (main) :Accept multiple -M switch.
        * doc/binutils.texi: Document that multiple -M switches are
        accepted and that a single -M switch can contain comma
        separated options.

2003-07-17  Nick Clifton  <nickc@redhat.com>

	* objdump.c (main): Issue a warning message if multiple -M
	switches are used.
	
	* doc/binutils.texi (objdump): Update documentation about -M
	option.
	
2003-07-17  Nick Clifton  <nickc@redhat.com>

	* po/es.po: New Spanish translation.

2003-07-11  Alan Modra  <amodra@bigpond.net.au>

	* po/binutils.pot: Regenerate.

2003-07-05  Christopher Faylor  <cgf@redhat.com>

	* dlltool.c (prefix_encode): Use a fixed length for alpha.

2003-07-04  Christopher Faylor  <cgf@redhat.com>

	* dlltool.c (prefix_encode): New function.  Encode temp file prefix
	from pid.